--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,18 @@
-<h1>Admin::Genres#edit</h1>
-<p>Find me in app/views/admin/genres/edit.html.erb</p>
+<!--<h1>Admin::Genres#edit</h1>-->
+<!--<p>Find me in app/views/admin/genres/edit.html.erb</p>-->
+
+<div class="container px-5 px-sm-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>ジャンル編集</h2>
+        <%= form_with model: @genre do |f| %>
+          <div class="form-group">
+            <label for="genre_name">ジャンル名</label>
+            <%= f.text_field :name %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
