[Add]admin｜3.1.3_ジャンル編集画面

--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -28,7 +28,8 @@
               <td>
                 <%= genre.name %>
               </td>
-              <td><%= link_to '編集する', edit_admin_genre_path(genre.id), class: "btn btn-sm btn-success" %>
+              <td>
+                <%= link_to '編集する', edit_admin_genre_path(genre.id), class: "btn btn-sm btn-success" %>
               </td>
             </tr>
             <% end %>
