--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -6,10 +6,11 @@
     <div class="row">
       <div class="col-md-12">
         <h2>ジャンル編集</h2>
-        <%= form_with model: @genre do |f| %>
+        <%= form_with model: @genre, url: admin_genre_path(@genre.id) do |f| %>
           <div class="form-group">
             <label for="genre_name">ジャンル名</label>
             <%= f.text_field :name %>
+            <%= f.submit '変更を保存', class: "btn btn-sm btn-success" %>
           </div>
         <% end %>
       </div>
