--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,2 +1,48 @@
-<h1>Admin::Items#new</h1>
-<p>Find me in app/views/admin/items/new.html.erb</p>
+<!--<h1>Admin::Items#new</h1>-->
+<!--<p>Find me in app/views/admin/items/new.html.erb</p>-->
+
+<div class="container px-5 px-sm-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>商品新規登録</h2>
+
+        <%= form_with model: @item, url: admin_items_path do |f| %>
+          <div class="form-group">
+            <label for="item_image">商品画像</label>
+            <%= f.file_field :image, accept: "image/*" %>
+          </div>
+          <div class="form-group">
+            <label for="item_name">商品名</label>
+            <%= f.text_field :name %>
+          </div>
+          <div class="form-group">
+            <label for="item_introduction">商品説明</label>
+            <%= f.text_area :introduction %>
+          </div>
+          <!--ジャンル（プルダウン）-->
+          <div class="form-group">
+            <label for="item_genre">ジャンル</label>
+            <%= f.collection_select :genre_id, Genre.all, :id, :name, {include_blank: "選択して下さい", prompt: false} %>
+          </div>
+          <div class="form-group">
+            <label for="item_price">税抜価格</label>
+            <%= f.number_field :price %>円
+          </div>
+          <div class="form-group">
+            <label for="item_is_active">販売ステータス</label>
+            <%= f.radio_button :is_active, true %>
+            <%= f.label :is_active, "販売中" %>
+            <%= f.radio_button :is_active, false %>
+            <%= f.label :is_active, "販売停止" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.submit '新規登録', class: "btn btn-sm btn-success" %>
+          </div>
+        <% end %>
+
+      </div>
+    </div>
+  </div>
+</div>
