--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,45 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<!--<h1>Admin::Items#index</h1>-->
+<!--<p>Find me in app/views/admin/items/index.html.erb</p>-->
+
+<div class="container px-5 px-sm-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>商品一覧</h2>
+
+        <table class="table table-hover table-inverse">
+          <thead>
+            <tr>
+              <th>商品ID</th>
+              <th>商品名</th>
+              <th>税抜価格</th>
+              <th>ジャンル</th>
+              <th>ステータス</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @items.each do |item| %>
+              <tr>
+                <td>
+                  <%= item.id %>
+                </td>
+                <td>
+                  <%= link_to item.name, admin_item_path(item.id) %>
+                </td>
+                <td>
+                  <%= item.price.to_s(:delimited) %>
+                </td>
+                <td>
+                  <%= item.genre_id %>
+                </td>
+                <td>
+                  <%= item.is_active %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
