--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -20,21 +20,11 @@
           <tbody>
             <% @items.each do |item| %>
               <tr>
-                <td>
-                  <%= item.id %>
-                </td>
-                <td>
-                  <%= link_to item.name, admin_item_path(item.id) %>
-                </td>
-                <td>
-                  <%= item.price.to_s(:delimited) %>
-                </td>
-                <td>
-                  <%= item.genre_id %>
-                </td>
-                <td>
-                  <%= item.is_active %>
-                </td>
+                <td><%= item.id %></td>
+                <td><%= link_to item.name, admin_item_path(item.id) %></td>
+                <td><%= item.price.to_s(:delimited) %></td>
+                <td><%= item.genre.name %></td>
+                <td><%= item.is_active %></td>
               </tr>
             <% end %>
           </tbody>
