--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -4,39 +4,49 @@
 <div class="container px-5 px-sm-0">
   <div class="container">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-12">
         <h2>商品詳細</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
         <%= image_tag @item.image %>
       </div>
 
       <div class="col-md-8">
-        <table>
-          <tbody>
-            <tr>
-              <td>商品名</td>
-              <td><%= @item.name %></td>
-            </tr>
-            <tr>
-              <td>商品説明</td>
-              <td><%= @item.introduction %></td>
-            </tr>
-            <tr>
-              <td>ジャンル</td>
-              <td><%= @item.genre_id %></td>
-            </tr>
-            <tr>
-              <td>税込み価格<br>(税抜き価格)</td>
-              <td><%= (@item.price * 1.1).round.to_s(:delimited) %> (<%= @item.price.to_s(:delimited) %>) 円</td>
-            </tr>
-            <tr>
-              <td>販売ステータス</td>
-              <td><%= @item.is_active %></td>
-            </tr>
-            <tr>
-              <td><%= link_to '編集する', edit_admin_item_path, class: "btn btn-sm btn-success" %></td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="container-fluid">
+          <div class="row justify-content-between">
+            <div class="col-md-8">
+              <table>
+                <tbody>
+                  <tr>
+                    <td>商品名</td>
+                    <td><%= @item.name %></td>
+                  </tr>
+                  <tr>
+                    <td>商品説明</td>
+                    <td><%= @item.introduction %></td>
+                  </tr>
+                  <tr>
+                    <td>ジャンル</td>
+                    <td><%= @item.genre.name %></td>
+                  </tr>
+                  <tr>
+                    <td>税込み価格<br>(税抜き価格)</td>
+                    <td><%= (@item.price * 1.1).round.to_s(:delimited) %> (<%= @item.price.to_s(:delimited) %>) 円</td>
+                  </tr>
+                  <tr>
+                    <td>販売ステータス</td>
+                    <td><%= @item.is_active %></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <%= link_to '編集する', edit_admin_item_path, class: "btn btn-sm btn-success" %>
+        </div>
       </div>
 
     </div>
