--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -24,7 +24,13 @@
                 <td><%= link_to item.name, admin_item_path(item.id) %></td>
                 <td><%= item.price.to_s(:delimited) %></td>
                 <td><%= item.genre.name %></td>
-                <td><%= item.is_active %></td>
+                <td>
+                  <% if item.is_active == true %>
+                  販売中
+                  <% else %>
+                  販売停止中
+                  <% end %>
+                </td>
               </tr>
             <% end %>
           </tbody>
