--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -37,7 +37,13 @@
                   </tr>
                   <tr>
                     <td>販売ステータス</td>
-                    <td><%= @item.is_active %></td>
+                    <td>
+                      <% if @item.is_active == true %>
+                      販売中
+                      <% else %>
+                      販売停止中
+                      <% end %>
+                    </td>
                   </tr>
                 </tbody>
               </table>
