--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -58,7 +58,7 @@
           </div>
           <div class="row justify-content-center">
             <%= link_to '編集する', edit_admin_customer_path, class: "btn btn-sm btn-success" %>
-            <%= link_to '注文履歴一覧を見る', public_orders_path_path, class: "btn btn-sm btn-success" %>
+            <%= link_to '注文履歴一覧を見る', public_orders_path_path, class: "btn btn-sm btn-primary" %>
           </div>
         </div>
       </div>
