--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -18,7 +18,7 @@
             </tr>
           </thead>
           <tbody>
-            <% @orders.each do |order| %>
+            <% @order_details.each do |order_detail| %>
               <tr>
                 <td><%= link_to order_details.created_at, admin_order_path(order_details.id) %></td>
                 <td><%= customer.last_name + customer.first_name %></td>
@@ -26,6 +26,7 @@
                 <td><%= order.status %></td>
               </tr>
             <% end %>
+            <%= paginate @order_details %>
           </tbody>
         </table>
       </div>
