--- a/app/views/admin/order_details/update.html.erb
+++ b/app/views/admin/order_details/update.html.erb
@@ -1,2 +1,41 @@
-<h1>Admin::OrderDetails#update</h1>
-<p>Find me in app/views/admin/order_details/update.html.erb</p>
+<!--<h1>Admin::OrderDetails#update</h1>-->
+<!--<p>Find me in app/views/admin/order_details/update.html.erb</p>-->
+
+<!--製作ステータスの更新-->
+
+<div class="container px-5 px-sm-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>注文履歴詳細</h2>
+
+        <%= form_with model: @order_detail, url: admin_order_detail_path(@order_detail.id) do |f| %>
+          <div class="form-group">
+            <label for="order_name">購入者</label>
+            <%= link_to @customer.last_name + @customer.first_name, admin_customer_path(customer.id) %>
+          </div>
+          <div class="form-group">
+            <label for="order_date">注文日</label>
+            <%= order_detail.created_at %>
+          </div>
+          <div class="form-group">
+            <label for="order_address">配送先</label>
+            <%= order.postal_code %> <%= order.address %><br>
+            <%= order.name %>
+          </div>
+          <div class="form-group">
+            <label for="order_payment_method">支払方法</label>
+            <%= order.payment_method %>
+          </div>
+
+          <!--↓追記中-->
+          <div class="form-group">
+            <label for="order_status">注文ステータス</label>
+            <%= f.collection_select :status, Order.all, :id, :name, {include_blank: "入金待ち", prompt: false} %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+  </div>
+</div>
