--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,81 @@
         <div class="container">
           <a class="navbar-brand" href="/"><span>LOGO</span></a>
         </div>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
+            <% if customers_signed_in? %>
+              <!--マイページ-->
+              <li>
+                <%= link_to "マイページ", public_customer_path, class: 'nav-link text-light' do %>
+                <% end %>
+              </li>
+              <!--商品一覧-->
+              <li>
+                <%= link_to "商品一覧", public_items_path, class: 'nav-link text-light' do %>
+                <% end %>
+              </li>
+              <!--カート-->
+              <li>
+                <%= link_to "カート", public_cart_items_path, class: 'nav-link text-light' do %>
+                <% end %>
+              </li>
+              <!--ログアウト-->
+              <li>
+                <%= link_to "ログアウト", destroy_customer_session_path, class: 'nav-link text-light', method: :delete do %>
+                <% end %>
+              </li>
+            <% elsif admin_signed_in? %>
+              <!--商品一覧-->
+              <li>
+                <%= link_to "商品一覧", admin_items_path, class: 'nav-link text-light' do %>
+                <% end %>
+              </li>
+              <!--会員一覧-->
+              <li>
+                <%= link_to "会員一覧", admin_customers_path, class: 'nav-link text-light' do %>
+                <% end %>
+              </li>
+              <!--注文履歴一覧-->
+              <li>
+                <%= link_to "注文履歴一覧", admin_root_path, class: 'nav-link text-light' do %>
+                <% end %>
+              </li>
+              <!--ジャンル一覧-->
+              <li>
+                <%= link_to "ジャンル一覧", admin_genres_path, class: 'nav-link text-light' do %>
+                <% end %>
+              </li>
+              <!--ログアウト-->
+              <li>
+                <%= link_to "ログアウト", destroy_admin_session_path, class: 'nav-link text-light', method: :delete do %>
+                <% end %>
+              </li>
+            <% else %>
+              <!--About-->
+              <li>
+                <%= link_to "About", public_about_path, class: 'nav-link text-light' do %>
+                <% end %>
+              </li>
+              <!--商品一覧-->
+              <li>
+                <%= link_to "商品一覧", public_items_path, class: 'nav-link text-light' do %>
+                <% end %>
+              </li>
+              <!--新規登録-->
+              <li>
+                <%= link_to "新規登録", new_customer_registration_path, class: 'nav-link text-light' do %>
+                <% end %>
+              </li>
+              <!--ログイン-->
+              <li>
+                <%= link_to "ログイン", new_customer_session_path, class: 'nav-link text-light' do %>
+                <% end %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+
+
       </nav>
     </header>
 
