--- a/app/views/admin/order_details/update.html.erb
+++ b/app/views/admin/order_details/update.html.erb
@@ -35,6 +35,55 @@
           </div>
         <% end %>
       </div>
+
+      <div class="col-md-8">
+        <table class="table table-hover table-inverse">
+          <thead>
+            <tr>
+              <th>商品名</th>
+              <th>単価（税込）</th>
+              <th>数量</th>
+              <th>小計</th>
+              <th>製作ステータス</th>
+              <th></th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <% @items.each do |item| %>
+              <tr>
+                <!--商品名-->
+                <td>XXX</td>
+                <!--単価（税込）-->
+                <!--数量-->
+                <!--小計-->
+                <!--製作ステータス／プルダウン-->
+                <!--更新ボタン-->
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="col-md-4">
+        <table>
+          <tbody>
+            <!--商品合計-->
+            <tr>
+              <td></td>
+            </tr>
+            <!--送料-->
+            <tr>
+              <td></td>
+            </tr>
+            <!--請求金額合計-->
+            <tr>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
+
+      </div>
     </div>
 
   </div>
