--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,2 +1,46 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
+<!--<h1>Public::Homes#top</h1>-->
+<!--<p>Find me in app/views/public/homes/top.html.erb</p>-->
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>ジャンル検索</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @genres.each do |genre| %>
+              <tr>
+                <td>
+                  <%= link_to genre.name, items_path %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="col-md-8 offset-md-1">
+        <div style = "border: solid 3px #000; padding-top: 20px; padding-bottom: 20px; margin: 5em">
+          ようこそ、ながのCAKEへ！<br>
+          このサイトは、ケーキ販売のECサイトになります。<br>
+          会員でない方も商品の閲覧はできますが、<br>
+          購入には会員登録が必要になります。<br>
+        </div>
+
+        <div>
+          <h2>新着商品</h2>
+          <% @items.each do |item| %>
+            <tr>
+              <td><%= image_tag item.image %></td><br>
+              <td><%= link_to item.name, item_path(item.id) %></td><br>
+              <td>￥<%= (item.price * 1.1).round.to_s(:delimited) %></td>
+            </tr>
+          <% end %>
+        </div>
+      </div>
+
+    </div>
+  </div>
