--- a/app/views/public/items/show.erb
+++ b/app/views/public/items/show.erb
@@ -1,1 +1,10 @@
-<h2>商品詳細</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'list', genres: @genres %>
+    </div>
+  </div>
+  <div class="col-md-8 offset-md-1">
+    <h2>商品詳細</h2>
+  </div>
+</div>
