--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <%= image_tag @item.image %>
+        <%= image_tag @item.image, size: "200x200" %>
       </div>
 
       <div class="col-md-8">
