--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,2 +1,15 @@
-<h1>Public::Homes#about</h1>
-<p>Find me in app/views/public/homes/about.html.erb</p>
+<!--<h1>Public::Homes#about</h1>-->
+<!--<p>Find me in app/views/public/homes/about.html.erb</p>-->
+
+<div class="container px-5 px-sm-0">
+  <div class="container">
+    <div style="text-align:center">
+        <h1>About</h1>
+        ながのCAKEは全国発送可能なケーキ屋さんです。<br>
+        お子様からお年寄りの方までお召し上がりいただけるよう、<br>
+        様々なバリエーションをご用意しております。<br>
+        また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+        ぜひご注文ください。
+      </div>
+  </div>
+</div>
