--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -28,7 +28,9 @@
             </div>
           <% end %>
         </div>
-
+        <div style="text-align:right">
+          <%= link_to "全ての商品を見る >", items_path %>
+        </div>
       </div>
     </div>
   </div>
