[Add] 3.2.6_登録情報編集画面

--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -10,7 +10,7 @@
 
       <div style="line-height: 4em">
         <b>登録情報</b>
-        <%= link_to '編集する', edit_customer_registration_path(@customer), class: "btn btn-sm btn-success" %>
+        <%= link_to '編集する', edit_my_page_path(@customer), class: "btn btn-sm btn-success" %>
       </div>
 
       <table border="1" style="border-collapse: collapse">
