--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,2 +1,7 @@
-<h1>Public::Customers#unsubscribe</h1>
-<p>Find me in app/views/public/customers/unsubscribe.html.erb</p>
+<!--<h1>Public::Customers#unsubscribe</h1>-->
+<!--<p>Find me in app/views/public/customers/unsubscribe.html.erb</p>-->
+
+<h1>本当に退会しますか？</h1>
+退会すると、会員登録情報や<br>
+これまでの購入履歴が閲覧できなくなります。<br>
+退会する場合は、「退会する」をクリックしてください。<br>
