[Add] 3.2.8_配送先登録・一覧画面

--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,7 +1,19 @@
 <!--<h1>Public::Customers#unsubscribe</h1>-->
 <!--<p>Find me in app/views/public/customers/unsubscribe.html.erb</p>-->
 
-<h1>本当に退会しますか？</h1>
-退会すると、会員登録情報や<br>
-これまでの購入履歴が閲覧できなくなります。<br>
-退会する場合は、「退会する」をクリックしてください。<br>
+<div class="container px-5 px-sm-0">
+  <div class="container">
+    <div style="text-align:center">
+      <h1>本当に退会しますか？</h1>
+      退会すると、会員登録情報や<br>
+      これまでの購入履歴が閲覧できなくなります。<br>
+      退会する場合は、「退会する」をクリックしてください。<br>
+    </div>
+    <div style="text-align:center">
+      <!--「退会しない」青ボタン-->
+      <%= link_to '退会しない', my_page_path(@customer), class: "btn btn-sm btn-primary" %>
+      <!--「退会する」赤ボタン-->
+      <%= link_to "退会する", customers_withdraw_path(@customer), method: :patch, class: "btn btn-sm btn-danger" %>
+    </div>
+  </div>
+</div>
