[Update] 3.2.8_配送先登録・一覧画面

--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -39,15 +39,15 @@
           </thead>
           <tbody>
             <% @addresses.each do |address| %>
-            <tr>
-              <td><%= address.postal_code %></td>
-              <td><%= address.address %></td>
-              <td><%= address.name %></td>
-              <td>
-                <%= link_to '編集する', edit_address_path, class: "btn btn-sm btn-success" %>
-                <%= link_to '削除する', address_path, method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-sm btn-danger" %>
-              </td>
-            </tr>
+              <tr>
+                <td><%= address.postal_code %></td>
+                <td><%= address.address %></td>
+                <td><%= address.name %></td>
+                <td>
+                  <%= link_to '編集する', edit_address_path(current_customer.id), class: "btn btn-sm btn-success" %>
+                  <%= link_to '削除する', address_path(current_customer.id), method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-sm btn-danger" %>
+                </td>
+              </tr>
             <% end %>
           </tbody>
         </table>
