--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,2 +1,32 @@
-<h1>Public::ShippingAddresses#edit</h1>
-<p>Find me in app/views/public/shipping_addresses/edit.html.erb</p>
+<!--<h1>Public::ShippingAddresses#edit</h1>-->
+<!--<p>Find me in app/views/public/shipping_addresses/edit.html.erb</p>-->
+
+<div class="container px-5 px-sm-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+
+        <h3>配送先編集</h3>
+        <table>
+          <%= form_with model: @address, url: address_path(@address.id) do |f| %>
+          <tr>
+            <td><%= f.label "郵便番号(ハイフンなし)" %></td>
+            <td><%= f.number_field :postal_code %></td>
+          </tr>
+
+          <tr>
+            <td><%= f.label "住所" %></td>
+            <td><%= f.text_field :address %></td>
+          </tr>
+
+          <tr>
+            <td><%= f.label "宛名" %></td>
+            <td><%= f.text_field :name %></td>
+          </tr>
+          <% end %>
+        </table>
+
+      </div>
+    </div>
+  </div>
+</div>
