--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -44,8 +44,8 @@
                 <td><%= address.address %></td>
                 <td><%= address.name %></td>
                 <td>
-                  <%= link_to '編集する', edit_address_path(current_customer.id), class: "btn btn-sm btn-success" %>
-                  <%= link_to '削除する', address_path(current_customer.id), method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-sm btn-danger" %>
+                  <%= link_to '編集する', edit_address_path(address.id), class: "btn btn-sm btn-success" %>
+                  <%= link_to '削除する', address_path(address.id), method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-sm btn-danger" %>
                 </td>
               </tr>
             <% end %>
