--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -7,25 +7,23 @@
       <div class="col-md-12">
 
         <h3>配送先編集</h3>
-        <table>
-          <%= form_with model: @address, url: address_path(@address.id) do |f| %>
-          <tr>
-            <td><%= f.label "郵便番号(ハイフンなし)" %></td>
-            <td><%= f.number_field :postal_code %></td>
-          </tr>
-
-          <tr>
-            <td><%= f.label "住所" %></td>
-            <td><%= f.text_field :address %></td>
-          </tr>
-
-          <tr>
-            <td><%= f.label "宛名" %></td>
-            <td><%= f.text_field :name %></td>
-          </tr>
-          <% end %>
-        </table>
-
+        <%= form_with model: @address, url: address_path(@address.id) do |f| %>
+          <table>
+            <tr>
+              <td><%= f.label "郵便番号(ハイフンなし)" %></td>
+              <td><%= f.number_field :postal_code %></td>
+            </tr>
+            <tr>
+              <td><%= f.label "住所" %></td>
+              <td><%= f.text_field :address %></td>
+            </tr>
+            <tr>
+              <td><%= f.label "宛名" %></td>
+              <td><%= f.text_field :name %></td>
+              <td><%= f.submit '変更内容を保存', class: "btn btn-sm btn-success" %></td>
+            </tr>
+          </table>
+        <% end %>
       </div>
     </div>
   </div>
