--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,2 +1,42 @@
-<h1>Public::CartItems#index</h1>
-<p>Find me in app/views/public/cart_items/index.html.erb</p>
+<!--<h1>Public::CartItems#index</h1>-->
+<!--<p>Find me in app/views/public/cart_items/index.html.erb</p>-->
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2>ショッピングカート</h2>
+      <!--「カートを空にする」赤ボタン-->
+
+      <table>
+        <thead>
+          <th>商品名</th>
+          <th>単価(税込)</th>
+          <th>数量</th>
+          <th>小計</th>
+          <!--↓「削除する」赤ボタン-->
+          <th></th>
+        </thead>
+        <tbody>
+        <% @cart_items.each do |cart_item| %>
+          <tr>
+            <td><%= cart_item.name %></td>
+            <td><%= cart_item.item.with_tax_price %></td>
+            <td><%= cart_item.amount %></td>
+            <td><%= cart_item.subtotal %></td>
+            <td></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+
+
+      <!--「買い物を続ける」青ボタン-->
+      <!--合計-->
+      <%# @total +=  @cart_items.item.with_tax_price * @cart_items.amount %>
+      <%= @total.round.to_s(:delimited)%>
+
+      <!--「情報入力に進む」緑ボタン-->
+
+    </div>
+  </div>
+</div>
