--- a/app/views/public/items/show.erb
+++ b/app/views/public/items/show.erb
@@ -9,10 +9,10 @@
     <div class="col-md-8 offset-md-1">
       <div class="row">
         <div class="col-md-3">
-          <%= image_tag @item.image %>
+          <%= image_tag @item.image, size: "200x200" %>
         </div>
 
-        <div class="col-md-7 offset-md-2">
+        <div class="col-md-7 offset-md-1">
           <%= form_with model: @cart_item do |f| %>
             <h4><%= @item.name %></h4>
             <%= @item.introduction %><br>
