[Update] 3.2.11_商品詳細画面～3.2.12_カート画面

--- a/app/views/public/items/show.erb
+++ b/app/views/public/items/show.erb
@@ -13,15 +13,20 @@
         </div>
 
         <div class="col-md-7 offset-md-1">
-          <%= form_with model: @cart_item do |f| %>
-            <h4><%= @item.name %></h4>
-            <%= @item.introduction %><br>
-            ￥<%= (@item.price * 1.1).round.to_s(:delimited) %>(税込み)<br>
-            <!--個数選択（プルダウン）-->
-            <%= f.select :amount, *[1..10] %>
-            <!--カートに入れる（緑ボタン）-->
-            <%= f.submit "カートに入れる", class: "btn btn-sm btn-success" %>
-          <% end %>
+          <%# if @item.is_active == TRUE %>
+            <%#= form_with model: @cart_item do |f| %>
+            <%= form_with(model: @cart_item, url: cart_items_path, method: :post, local: true)do |f| %>
+              <h4><%= @item.name %></h4>
+              <%= @item.introduction %><br>
+              ￥<%= (@item.price * 1.1).round.to_s(:delimited) %>(税込み)<br>
+              <!--個数選択（プルダウン）-->
+              <%= f.select :amount, *[1..10] %>
+              <!--カートに入れる（緑ボタン）-->
+              <%= f.submit "カートに入れる", class: "btn btn-sm btn-success" %>
+              <%= f.hidden_field :item_id, value: @item.id %>
+
+            <% end %>
+          <%# end %>
         </div>
       </div>
     </div>
