--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -6,7 +6,11 @@
     <div class="col-md-12">
       <h2>ショッピングカート</h2>
       <!--「カートを空にする」赤ボタン-->
+    </div>
+  </div>
 
+  <div class="row">
+    <div class="col-md-12">
       <table>
         <thead>
           <th>商品名</th>
@@ -19,24 +23,37 @@
         <tbody>
         <% @cart_items.each do |cart_item| %>
           <tr>
-            <td><%= cart_item.name %></td>
+            <td><%#= image_tag cart_item.image, size: "100x100" %>　<%#= cart_item.name %></td>
             <td><%= cart_item.item.with_tax_price %></td>
             <td><%= cart_item.amount %></td>
             <td><%= cart_item.subtotal %></td>
-            <td></td>
+            <td><%= link_to '削除する', cart_items_path, method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-sm btn-danger" %></td>
+            <% @total= @total + cart_item.subtotal %>
           </tr>
         <% end %>
         </tbody>
       </table>
-
-
-      <!--「買い物を続ける」青ボタン-->
-      <!--合計-->
-      <%# @total +=  @cart_items.item.with_tax_price * @cart_items.amount %>
-      <%= @total.round.to_s(:delimited)%>
-
-      <!--「情報入力に進む」緑ボタン-->
-
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-3">
+      <!--「買い物を続ける」青ボタン-->
+    </div>
+    <div class="col-md-4 offset-md-5">
+      <table>
+        <tr>合計金額</tr>
+        <%# @total +=  @cart_items.item.with_tax_price * @cart_items.amount %>
+        <tr><%= @total.round.to_s(:delimited) %></tr>
+      </table>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <!--「情報入力に進む」緑ボタン-->
+      <%#= link_to '情報入力に進む', XXXXXX_path, class: "btn btn-sm btn-success" %>
+    </div>
+  </div>
+
 </div>
