--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,27 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+<!--<h1>Public::Orders#new</h1>-->
+<!--<p>Find me in app/views/public/orders/new.html.erb</p>-->
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2>注文情報入力</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h3>支払方法</h3>
+      <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+      <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
+      <%#= f.radio_button :payment_method, "credit_card" %>
+      <%#= f.label :payment_method, "クレジットカード" %>
+
+      <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+      <%= f.label :payment_method, Order.payment_methods_i18n[:transfer]%>
+      <%#= f.radio_button :payment_method, "transfer" %>
+      <%#= f.label :payment_method, "銀行振込" %>
+
+      <h3>お届け先</h3>
+    </div>
+  </div>
+</div>
