--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -3,15 +3,18 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
       <h2>ショッピングカート</h2>
+    </div>
+    <div class="col-md-2 offset-md-4">
       <!--「カートを空にする」赤ボタン-->
+      <%= link_to 'カートを空にする', cart_items_path, method: :destroy_all, data: {confirm: "本当に消しますか？"}, class: "btn btn-sm btn-danger" %>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-12">
-      <table>
+      <table class="table table-hover table-inverse">
         <thead>
           <th>商品名</th>
           <th>単価(税込)</th>
@@ -23,12 +26,12 @@
         <tbody>
         <% @cart_items.each do |cart_item| %>
           <tr>
-            <td><%#= image_tag cart_item.image, size: "100x100" %>　<%#= cart_item.name %></td>
-            <td><%= cart_item.item.with_tax_price %></td>
+            <td><%= image_tag cart_item.item.image, size: "100x100" %>　<%= cart_item.item.name %></td>
+            <td><%= cart_item.item.with_tax_price.round.to_s(:delimited) %></td>
             <td><%= cart_item.amount %></td>
-            <td><%= cart_item.subtotal %></td>
-            <td><%= link_to '削除する', cart_items_path, method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-sm btn-danger" %></td>
-            <% @total= @total + cart_item.subtotal %>
+            <td><%= cart_item.subtotal.round.to_s(:delimited) %></td>
+            <td><%= link_to '削除する', cart_item_path(cart_item.id), method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-sm btn-danger" %></td>
+            <% @total += cart_item.subtotal %>
           </tr>
         <% end %>
         </tbody>
@@ -41,10 +44,11 @@
       <!--「買い物を続ける」青ボタン-->
     </div>
     <div class="col-md-4 offset-md-5">
-      <table>
-        <tr>合計金額</tr>
-        <%# @total +=  @cart_items.item.with_tax_price * @cart_items.amount %>
-        <tr><%= @total.round.to_s(:delimited) %></tr>
+      <table  class="table table-hover table-inverse">
+        <tr>
+          <td>合計金額</td>
+          <td><%= @total.round.to_s(:delimited) %></td>
+        </tr>
       </table>
     </div>
   </div>
