--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -28,7 +28,10 @@
           <tr>
             <td><%= image_tag cart_item.item.image, size: "100x100" %>　<%= cart_item.item.name %></td>
             <td><%= cart_item.item.with_tax_price.round.to_s(:delimited) %></td>
-            <td><%= cart_item.amount %></td>
+            <td>
+              <%= cart_item.amount %>
+              <%= link_to '変更', cart_item_path(cart_item.id), method: :patch , class: "btn btn-sm btn-success" %>
+            </td>
             <td><%= cart_item.subtotal.round.to_s(:delimited) %></td>
             <td><%= link_to '削除する', cart_item_path(cart_item.id), method: :delete, data: {confirm: "本当に消しますか？"}, class: "btn btn-sm btn-danger" %></td>
             <% @total += cart_item.subtotal %>
@@ -41,7 +44,7 @@
 
   <div class="row">
     <div class="col-md-3">
-      <!--「買い物を続ける」青ボタン-->
+      <%= link_to '買い物を続ける', root_path, class: "btn btn-sm btn-primary" %>
     </div>
     <div class="col-md-4 offset-md-5">
       <table  class="table table-hover table-inverse">
@@ -55,8 +58,9 @@
 
   <div class="row">
     <div class="col-md-12">
-      <!--「情報入力に進む」緑ボタン-->
-      <%#= link_to '情報入力に進む', XXXXXX_path, class: "btn btn-sm btn-success" %>
+      <div style="text-align:center">
+      <%= link_to '情報入力に進む', new_order_path, class: "btn btn-sm btn-success" %>
+      </div>
     </div>
   </div>
 
