--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -10,18 +10,30 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <h3>支払方法</h3>
-      <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
-      <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
-      <%#= f.radio_button :payment_method, "credit_card" %>
-      <%#= f.label :payment_method, "クレジットカード" %>
+      <%= form_with model: @order do |f| %>
+        <h3>支払方法</h3>
+        <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+        <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
+        <%#= f.radio_button :payment_method, "credit_card" %>
+        <%#= f.label :payment_method, "クレジットカード" %>
+        <br>
+        <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+        <%= f.label :payment_method, Order.payment_methods_i18n[:transfer]%>
+        <%#= f.radio_button :payment_method, "transfer" %>
+        <%#= f.label :payment_method, "銀行振込" %>
 
-      <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
-      <%= f.label :payment_method, Order.payment_methods_i18n[:transfer]%>
-      <%#= f.radio_button :payment_method, "transfer" %>
-      <%#= f.label :payment_method, "銀行振込" %>
+        <h3>お届け先</h3>
+        <%= f.radio_button :address, "address" %>
+        <%= f.label :address, "ご自身の住所" %><br>
+        &nbsp&nbsp&nbsp&nbsp〒<%= @customer.postal_code %>&nbsp&nbsp<%= @customer.address %><br>
+        &nbsp&nbsp&nbsp&nbsp<%= @customer.last_name %><%= @customer.first_name %><br>
 
-      <h3>お届け先</h3>
+        <%= f.radio_button :address, "address" %>
+        <%= f.label :address, "登録済住所から選択" %><br>
+        &nbsp&nbsp&nbsp&nbsp<%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
+      <% end %>
+
+
     </div>
   </div>
 </div>
