--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="col-md-2 offset-md-4">
       <!--「カートを空にする」赤ボタン-->
-      <%= link_to 'カートを空にする', cart_items_path, method: :destroy_all, data: {confirm: "本当に消しますか？"}, class: "btn btn-sm btn-danger" %>
+      <%= link_to 'カートを空にする', cart_items_destroy_all_path, method: :destroy_all, data: {confirm: "本当に消しますか？"}, class: "btn btn-sm btn-danger" %>
     </div>
   </div>
 
