--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -11,29 +11,61 @@
   <div class="row">
     <div class="col-md-12">
       <%= form_with model: @order do |f| %>
-        <h3>支払方法</h3>
-        <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
-        <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
-        <%#= f.radio_button :payment_method, "credit_card" %>
-        <%#= f.label :payment_method, "クレジットカード" %>
-        <br>
-        <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
-        <%= f.label :payment_method, Order.payment_methods_i18n[:transfer]%>
-        <%#= f.radio_button :payment_method, "transfer" %>
-        <%#= f.label :payment_method, "銀行振込" %>
+        <h3><b>支払方法</b></h3>
+        <div class="form-group">
+          <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+          <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
+          <%#= f.radio_button :payment_method, "credit_card" %>
+          <%#= f.label :payment_method, "クレジットカード" %>
+        </div>
+        <div class="form-group">
+          <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+          <%= f.label :payment_method, Order.payment_methods_i18n[:transfer]%>
+          <%#= f.radio_button :payment_method, "transfer" %>
+          <%#= f.label :payment_method, "銀行振込" %>
+        </div>
 
-        <h3>お届け先</h3>
-        <%= f.radio_button :address, "address" %>
-        <%= f.label :address, "ご自身の住所" %><br>
-        &nbsp&nbsp&nbsp&nbsp〒<%= @customer.postal_code %>&nbsp&nbsp<%= @customer.address %><br>
-        &nbsp&nbsp&nbsp&nbsp<%= @customer.last_name %><%= @customer.first_name %><br>
-
-        <%= f.radio_button :address, "address" %>
-        <%= f.label :address, "登録済住所から選択" %><br>
-        &nbsp&nbsp&nbsp&nbsp<%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
+        <h3><b>お届け先</b></h3>
+        <div class="form-group">
+          <%= f.radio_button :address, "address" %>
+          <%= f.label :address, "ご自身の住所" %><br>
+          &emsp;〒<%= @customer.postal_code %>&nbsp&nbsp<%= @customer.address %><br>
+          &emsp;<%= @customer.last_name %><%= @customer.first_name %>
+        </div>
+        <div class="form-group">
+          <%= f.radio_button :address, "address" %>
+          <%= f.label :address, "登録済住所から選択" %><br>
+          &emsp;<%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
+        </div>
+        <div class="form-group">
+          <%= f.radio_button :address, "address" %>
+          <%= f.label :address, "新しいお届け先" %><br>
+          <table>
+            <tr>
+              <td>&emsp;<%= f.label :postal_code, "郵便番号(ハイフンなし)" %>&emsp;</td>
+              <td><%= f.number_field :postal_code %></td>
+            </tr>
+            <tr>
+              <td>&emsp;<%= f.label "住所" %></td>
+              <td><%= f.text_field :address %></td>
+            </tr>
+            <tr>
+              <td>&emsp;<%= f.label "宛名" %></td>
+              <td><%= f.text_field :name %></td>
+            </tr>
+          </table>
+        </div>
       <% end %>
 
 
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div style="text-align:center">
+        <%= link_to '確認画面へ進む', orders_confirm_path, class: "btn btn-sm btn-primary" %>
+      </div>
     </div>
   </div>
 </div>
