--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,2 +1,15 @@
 <h1>Public::Orders#confirm</h1>
 <p>Find me in app/views/public/orders/confirm.html.erb</p>
+
+<div class="container px-5 px-sm-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>注文情報確認</h2>
+
+        <table  class="table table-hover table-inverse">
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
