--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,7 +1,6 @@
 <!--<h1>Public::Orders#new</h1>-->
 <!--<p>Find me in app/views/public/orders/new.html.erb</p>-->
 
-
 <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -10,36 +9,32 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <%= form_with model: @order do |f| %>
+      <%= form_with model: @order, url: orders_confirm_path, method: :post, local: true do |f| %>
         <h3><b>支払方法</b></h3>
         <div class="form-group">
           <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
           <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
-          <%#= f.radio_button :payment_method, "credit_card" %>
-          <%#= f.label :payment_method, "クレジットカード" %>
         </div>
         <div class="form-group">
           <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
           <%= f.label :payment_method, Order.payment_methods_i18n[:transfer]%>
-          <%#= f.radio_button :payment_method, "transfer" %>
-          <%#= f.label :payment_method, "銀行振込" %>
         </div>
 
         <h3><b>お届け先</b></h3>
         <div class="form-group">
-          <%= f.radio_button :address, "address" %>
+          <%= f.radio_button :address, 0, checked: "checked" %>
           <%= f.label :address, "ご自身の住所" %><br>
           &emsp;〒<%= @customer.postal_code %>&nbsp&nbsp<%= @customer.address %><br>
           &emsp;<%= @customer.last_name %><%= @customer.first_name %>
         </div>
         <div class="form-group">
-          <%= f.radio_button :address, "address" %>
+          <%= f.radio_button :address, 1 %>
           <%= f.label :address, "登録済住所から選択" %><br>
-          &emsp;<%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
+          &emsp;<%= f.select :address, options_from_collection_for_select(@addresses, :id, :address_display) %>
         </div>
         <div class="form-group">
-          <%= f.radio_button :address, "address" %>
-          <%= f.label :address, "新しいお届け先" %><br>
+          <%= f.radio_button :select_address, 2 %>
+          <%= f.label :select_address, "新しいお届け先" %><br>
           <table>
             <tr>
               <td>&emsp;<%= f.label :postal_code, "郵便番号(ハイフンなし)" %>&emsp;</td>
@@ -55,17 +50,11 @@
             </tr>
           </table>
         </div>
+        <div style="text-align:center">
+          <%#= link_to '確認画面へ進む', orders_confirm_path, class: "btn btn-sm btn-primary" %>
+          <%= f.submit "確認画面へ進む", class: "btn btn-sm btn-primary" %>
+        </div>
       <% end %>
 
-
     </div>
   </div>
-
-  <div class="row">
-    <div class="col-md-12">
-      <div style="text-align:center">
-        <%= link_to '確認画面へ進む', orders_confirm_path, class: "btn btn-sm btn-primary" %>
-      </div>
-    </div>
-  </div>
-</div>
