[Update] 3.2.13_注文情報入力画面

--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -22,19 +22,19 @@
 
         <h3><b>お届け先</b></h3>
         <div class="form-group">
-          <%= f.radio_button :address, 0, checked: "checked" %>
-          <%= f.label :address, "ご自身の住所" %><br>
+          <%= f.radio_button :address_option, 0, checked: "checked" %>
+          <%= f.label :address_option, "ご自身の住所" %><br>
           &emsp;〒<%= @customer.postal_code %>&nbsp&nbsp<%= @customer.address %><br>
           &emsp;<%= @customer.last_name %><%= @customer.first_name %>
         </div>
         <div class="form-group">
-          <%= f.radio_button :address, 1 %>
-          <%= f.label :address, "登録済住所から選択" %><br>
-          &emsp;<%= f.select :address, options_from_collection_for_select(@addresses, :id, :address_display) %>
+          <%= f.radio_button :address_option, 1 %>
+          <%= f.label :address_option, "登録済住所から選択" %><br>
+          &emsp;<%= f.select :address_id, options_from_collection_for_select(@addresses, :id, :address_display) %>
         </div>
         <div class="form-group">
-          <%= f.radio_button :select_address, 2 %>
-          <%= f.label :select_address, "新しいお届け先" %><br>
+          <%= f.radio_button :address_option, 2 %>
+          <%= f.label :address_option, "新しいお届け先" %><br>
           <table>
             <tr>
               <td>&emsp;<%= f.label :postal_code, "郵便番号(ハイフンなし)" %>&emsp;</td>
