--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,5 +1,5 @@
-<h1>Public::Orders#confirm</h1>
-<p>Find me in app/views/public/orders/confirm.html.erb</p>
+<!--<h1>Public::Orders#confirm</h1>-->
+<!--<p>Find me in app/views/public/orders/confirm.html.erb</p>-->
 
 <div class="container px-5 px-sm-0">
   <div class="container">
@@ -8,6 +8,17 @@
         <h2>注文情報確認</h2>
 
         <table  class="table table-hover table-inverse">
+          <thead>
+            <th>商品名</th>
+            <th>単価(税込)</th>
+            <th>数量</th>
+            <th>小計</th>
+          </thead>
+          <tbody>
+            <tr>
+              <td></td>
+            </tr>
+          </tbody>
         </table>
       </div>
     </div>
