[Add] 3.2.15_サンクスページ

--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,2 +1,10 @@
-<h1>Public::Orders#complete</h1>
-<p>Find me in app/views/public/orders/complete.html.erb</p>
+<!--<h1>Public::Orders#complete</h1>-->
+<!--<p>Find me in app/views/public/orders/complete.html.erb</p>-->
+
+<div class="container px-5 px-sm-0">
+  <div class="container">
+    <div style="text-align:center">
+      <h1>ご注文ありがとうございました！</h1>
+    </div>
+  </div>
+</div>
