--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -35,6 +35,10 @@
             <% end %>
           </tbody>
         </table>
+
+        <div style="text-align:center">
+          <%= link_to '商品新規登録', new_admin_item_path, class: "btn btn-sm btn-success" %>
+        </div>
       </div>
     </div>
   </div>
