--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -36,7 +36,7 @@
         <table  class="table table-hover table-inverse">
           <tr>
             <th>購入者</th>
-            <td><%= link_to @order.customer.last_name + @order.customer.first_name, admin_customer_path(:id) %></td>
+            <td><%= link_to @order.customer.last_name + @order.customer.first_name, admin_customer_path(@order.customer.id) %></td>
           </tr>
           <tr>
             <th>注文日</th>
@@ -57,7 +57,7 @@
             <th>注文ステータス</th>
             <td><%#= @order.status_i18n %>
               <%= form_with model: @order, url: admin_order_path, method: :patch, local: true do |f| %>
-                <%= f.select :status, Order.status_i18n.invert, {prompt: false} %>
+                <%= f.select :status, Order.statuses_i18n.invert %>
                 <%= f.submit "更新", class: "btn btn-sm btn-success" %>
               <% end %>
             </td>
@@ -93,7 +93,7 @@
                 <!--製作ステータス／プルダウン-->
                 <td><%#= order_detail.making_status_i18n %>
                   <%= form_with model: order_detail, url: admin_order_path, method: :patch, local: true do |f| %>
-                    <%= f.select :making_status, order_detail.making_status_i18n.invert %>
+                    <%= f.select :making_status, OrderDetail.making_statuses_i18n.invert %>
                     <%= f.submit '更新', class: "btn btn-sm btn-success" %>
                   <% end %>
                 </td>
