--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -4,7 +4,7 @@
       <h2>新規会員登録</h2>
 
       <table>
-        <%= form_with model: @customer, url: customer_registration_path do |f| %>
+        <%= form_with model: @customer, url: customer_registration_path, method: :post do |f| %>
           <%= render "public/shared/error_messages", resource: resource %>
 
           <tr>
