--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -9,7 +9,7 @@
       <div class="row justify-content-between">
         <table>
           <tbody>
-            <%= form_with model: @customer, url: edit_my_page_path do |f| %>
+            <%= form_with model: @customer, url: customers_information_path do |f| %>
               <tr>
                 <th>氏名</th>
                 <td><%= f.text_field :last_name %></td>
@@ -37,7 +37,9 @@
                 <td><%= f.email_field :email %></td>
               </tr>
               <tr>
-                <td><%= link_to '編集内容を保存', customers_information_path, class: "btn btn-sm btn-success" %></td>
+                <td><%#= link_to '編集内容を保存', customers_information_path, class: "btn btn-sm btn-success" %>
+                  <%= f.submit "編集内容を保存", class: "btn btn-sm btn-success" %>
+                </td>
                 <td><%= link_to '退会する', customers_unsubscribe_path, class: "btn btn-sm btn-danger" %></td>
               </tr>
             <% end %>
