--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -24,8 +24,9 @@
                 <!--配送先-->
                 <td><%= order.address %></td>
                 <!--注文商品-->
-                <td><% order.order_details.each do|order_detail| %>
-                  <%= order_detail.item.name %><br>
+                <td>
+                  <% order.order_details.each do|order_detail| %>
+                    <%= order_detail.item.name %><br>
                   <% end %>
                 </td>
                 <!--支払金額-->
